--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,8 @@ body{
     text-shadow: 1px 1px 1px #000;
     text-align: center;
 }
+.main{
+    color: antiquewhite;
+    text-shadow: 1px 1px 1px #000000;
+    text-align: center;
+}
