--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,8 @@
-body{
-    background-color: #006363;
-}
-.app {
-  justify-content: center;
+.App {
   padding: 30px;
   display: flex;
 }
 
 .App > div {
   margin-right: 50px;
-}
-.todolist{
-    background-color: #B15B14;
-    border: 4px solid #592800	;
-    border-radius: 5%;
-    padding: 15px;
-    transition: 0.25s linear;
-}
-.todolist:hover{
-    box-shadow: 1px 1px 1px 1px #000;
-}
-.todolist:not(:first-child){
-    margin: 0 0 0 12px;
-    
-}
-.todolist>h3{
-    color: rgb(225, 225, 225);
-    text-shadow: 1px 1px 1px #000;
-    text-align: center;
-}
-.main{
-    color: antiquewhite;
-    text-shadow: 1px 1px 1px #000000;
-    text-align: center;
-}
-.btn{
-    background-color: rgb(234, 247, 247)95, 224, 224);
-    margin: 0 0 0 10px;
-}
-.btn:active{
-    background-color: rgb(249, 249, 39);
 }
